src/style/toast-ui.css
.toastui-editor-defaultUI {
  border-radius: 0.375rem !important;
  border: 1px solid #cbd5e1 !important;
} 

.toastui-editor-md-tab-container {
  visibility: hidden; /* Preview 영역 숨김 */
  width: 0;
  border-top-left-radius: 0.375rem !important;
}

@media (max-width: 623px) {
  .toastui-editor-defaultUI-toolbar{
    padding: 0 12px;
  }
}

.toastui-editor-defaultUI-toolbar {
  border-top-right-radius: 0.375rem !important;
  border-top-left-radius: 0.375rem !important;
}

.toastui-editor-ww-container, .toastui-editor-md-container {
  border-bottom-right-radius: 0.375rem !important;
  border-bottom-left-radius: 0.375rem !important;
}

.toastui-editor {
  max-height: 500px;
  overflow-y: auto;
  overscroll-behavior: none;
}

.toastui-editor-contents {
  font-family: 'NanumGothic' !important;
  font-size: 16px !important;
  max-height: 500px;
}

